fix graph overflow and viewBox height
- .graph had overflow: hidden which resulted in the bottom of the svg being
   cutoff
- viewBox had the height calculation copied twice

--- a/src/css/flux.css
+++ b/src/css/flux.css
@@ -669,7 +669,7 @@ body.dark-theme {
     position: relative;
     height: var(--graph-total-height);
     width: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 div.graph--bar-group {
